Fix index page looking on mobile devices

--- a/css/app.css
+++ b/css/app.css
@@ -86,11 +86,11 @@ table td {
 }
 
 .index-page * {
-    margin-top: 50px;
+    margin-top: 30px;
 }
 
 .index-page h1 {
-    font-size: 6em;
+    font-size: 5em;
     font-weight: 300;
 }
 
@@ -99,7 +99,7 @@ table td {
 }
 
 .index-page h3 {
-    color: #999;
+    color: #888;
     width: 80%;
     margin: 50px auto 50px auto;
     font-weight: 100;
@@ -118,6 +118,18 @@ table td {
     .index-page {
         width: 80%;
     } 
+
+    .index-page * {
+        margin-top: 60px;
+    }
+
+    .index-page h1 {
+        font-size: 6em;
+    }
+
+    .index-page h3 {
+        width: 70%;
+    }
 
     .index-page button {
         width: 50%;
